--- a/.github/workflows/update-stats-.yml
+++ b/.github/workflows/update-stats-.yml
@@ -16,7 +16,7 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: harry4455/waka-readme-stats@locale/korean
+      - uses: harry4455/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -28,4 +28,3 @@ jobs:
           SHOW_LOC_CHART: "False"
           SHOW_LINES_OF_CODE: "False"
           SHOW_SHORT_INFO: "True"
-          LOCALE: "ko"
